<resources>
    <string name="app_name">Нереальный калькулятор</string>
    <string name="_text" />
    <string name="title_activity_main2">Нереальный калькулятор by TwiT</string>
    <string name="_btnAC">AC</string>
    <string name="_btnDel">del</string>
    <string name="_btnpercent">^</string>
    <string name="_btndivide">/</string>
    <string name="_btn7">7</string>
    <string name="_btn8">8</string>
    <string name="_btn9">9</string>
    <string name="_btnmultiply">*</string>
    <string name="_btn4">4</string>
    <string name="_btn5">5</string>
    <string name="_btn6">6</string>
    <string name="_btnminus">-</string>
    <string name="_btn1">1</string>
    <string name="_btn2">2</string>
    <string name="_btn3">3</string>
    <string name="_btnplus">+</string>
    <string name="_btnneg"> </string>
    <string name="_btn0">0</string>
    <string name="_btndot">.</string>
    <string name="_btnequals">=</string>
</resources>